<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".first.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background"
            android:scaleType="centerCrop"
            android:contentDescription="@string/background_image" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/iv_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_photo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/til_name"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="64dp"
                    android:layout_marginBottom="32dp"
                    android:contentDescription="@string/cd_image" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_name"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_login"
                    app:layout_constraintBottom_toTopOf="@+id/til_palindrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="255"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_palindrom"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_name"
                    app:layout_constraintBottom_toTopOf="@id/bt_check"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_palindrome">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_palindrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="255"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/bt_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_palindrom"
                    android:layout_marginTop="64dp"
                    android:text="@string/bt_check"/>

                <Button
                    android:id="@id/bt_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bt_check"
                    android:layout_marginTop="8dp"
                    android:text="@string/bt_next"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>



</ScrollView>